variables.Variables.scala.error
Compilation error:
Variables:4: error: not found: value stepAmount
  stepAmount = stepAmount + 1;
  ^Variables:5: error: not found: value pickUp
  pickUp()
  ^Variables:7: error: not found: value stepAmount
while (stepAmount != 0) {
       ^Variables:9: error: not found: value stepAmount
  stepAmount = StepAmount - 1;
  ^